--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <head>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </head>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, iste! Sequi quibusdam, blanditiis necessitatibus nihil harum laborum alias vel tempora commodi minus iusto sit tenetur, suscipit laboriosam voluptatibus. Ipsa, consequuntur.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quas pariatur exercitationem voluptates nesciunt quos temporibus debitis provident dicta. Corporis dolore doloribus error nihil deleniti beatae explicabo delectus velit perferendis.</p>
         </article>
     </main>
 </body>
