--- a/index.html
+++ b/index.html
@@ -4,20 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Curso em Video</title>
-    <link rel="stylesheet" href="estilos/style.css"
+    <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
     <main>
         <head>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </head>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. In, iste! Sequi quibusdam, blanditiis necessitatibus nihil harum laborum alias vel tempora commodi minus iusto sit tenetur, suscipit laboriosam voluptatibus. Ipsa, consequuntur.</p>
+            <p><a href="https://www.linkedin.com/in/rafael-nascimento-663470121/">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JavaScript">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quas pariatur exercitationem voluptates nesciunt quos temporibus debitis provident dicta. Corporis dolore doloribus error nihil deleniti beatae explicabo delectus velit perferendis.</p>
+            <p><a href="https://www.linkedin.com/company/zendesk/posts/?feedView=all">Acesse o curso de JavaSript</a></p>
         </article>
     </main>
 </body>
